Edited nav bar and upload page

--- a/frontend-react/src/NavBar.css
+++ b/frontend-react/src/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: black;
-  height: 150px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,29 +12,28 @@
 
 .nav-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  height: 100%;
   width: 100%;
-  height: 100px;
-  max-width: 1500px;
+  /*max-width: 1500px;*/
 }
 
 .nav-logo {
   color: white;
-  align-items: center;
   margin-left: 20px;
-  cursor: pointer;
   text-decoration: none;
-  font-size: 5rem;
+  font-size: 2.5rem;
   flex-grow: 1;
   text-shadow: 2px 2px white;
+  max-width: fit-content;
 }
 
 .nav-menu {
   display: flex;
   list-style: none;
   text-align: center;
-  margin-right: 2rem;
+  margin-bottom: 0px;
 }
 
 .nav-links {
